# loop-lab

./: .gitignore  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/finn-build/: SKILL.md
.claude/skills/finn-review/: SKILL.md
.claude/skills/finn-spec/: SKILL.md
.github/workflows/: ci.yml
src/loop_lab/: __init__.py  cli.py  textstats.py
tests/: test_cli.py  test_textstats.py
