[project]
name = "loop-lab"
version = "0.1.0"
description = "Tiny CLI sandbox for proving out the Finn-loop (spec -> build -> review) pipeline."
requires-python = ">=3.12"
dependencies = []

[project.scripts]
loop-lab = "loop_lab.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
